<resources>
    <string name="app_name">Mobile Palengke</string>
    <string name="btn1">SIGN IN</string>
    <string name="btn2">SIGN UP</string>
    <string name="btn3">RECOVER PASSWORD</string>
    <string name="btn4">VALIDATE CODE</string>
    <string name="btn5">UPDATE PASSWORD</string>
    <string name="btn6">BACK TO HOME</string>
    <string name="btn7">SIGN OUT</string>
    <string name="btn8">SAVE CHANGES</string>
    <string name="btn9">Edit</string>
    <string name="welcome1">Welcome to Mobile Palengke</string>
    <string name="welcome2">Here to make your life easier.</string>
    <string name="welcome3">Just tap your order and we\'ll deliver!</string>
    <string name="profile1">Profile</string>
    <string name="profile2">Full Name</string>
    <string name="profile3">Account Details</string>
    <string name="profile4">Addresses</string>
    <string name="profile5">Settings</string>
    <string name="AccDetails1">Account Details</string>
    <string name="AccDetails2">Public Info</string>
    <string name="AccDetails3">First Name</string>
    <string name="AccDetails4">Last Name</string>
    <string name="AccDetails5">Private Details</string>
    <string name="AccDetails6">Email Address</string>
    <string name="AccDetails7">Change Password</string>
    <string name="AccDetails8">Confirm Password</string>
    <string name="GenSettings1">General Settings</string>
    <string name="GenSettings2">Settings</string>
    <string name="GenSettings3">Notification Settings</string>
    <string name="GenSettings4">Privacy Settings</string>
    <string name="GenSettings5">Language</string>
    <string name="GenSettings6">Currency</string>
    <string name="GenSettings7">Support</string>
    <string name="GenSettings8">Help Center</string>
    <string name="GenSettings9">Community</string>
    <string name="GenSettings10">Mobile Palengke Policies</string>
    <string name="GenSettings11">About</string>
    <string-array name="LanguageArray">
        <item>English</item>
    </string-array>
    <string-array name="CurrencyArray">
        <item>PhP</item>
        <item>USD</item>
    </string-array>
    <string name="CategoriesNav">Categories</string>
    <string name="Addaddress">Add an Address</string>
    <string name="NavigationBack">back</string>
    <string name="About1">About</string>
    <string name="About2">Our Story</string>
    <string name="About3">Mobile Palengke, established in March 2020, is a delivery service with the safety of its customers in mind. Instead of letting customers go out and buy their groceries, we bring the groceries to them.</string>
    <string name="About4">Let our customers experience the freshness of products offered by “Palengke” such as fruits, vegetables, meat, frozen meat,and other necessities without having to leave the safety of their homes. Mobile Palengke differs from other more established grocery stores and supermarkets by ensuring that the products being delivered to our customers is in optimal freshness and quality</string>
    <string name="About5">Mission</string>
    <string name="About6">Vision</string>
    <string name="About7">Our Goals</string>
    <string name="About8">Mobile Palengke is dedicated to provide quality fresh produce with a competitive price in the market and to help promote fresh products produced by our local farmers to help them attain a sustainable business.</string>
    <string name="About9">Mobile Palengke aims to be the number one food essential provider and to support our local farmers especially during trying times.</string>
    <string name="About10">&#8226; To create an alternative way where people can still purchase essentials without leaving the safety of their home or compromising their health.</string>
    <string name="About11">&#8226; To provide our local farmers much better opportunities and promote new feasible businesses amidst the pandemic and other possible threats.</string>
    <string name="About12">Our Logistic Partners</string>
    <string name="About13">Our Partnership Brands</string>
    <string name="signin1">Forgot Password?</string>
    <string name="signup1">By signing up you accept our Terms of Services and Privacy Policy.</string>
    <string name="edittext1">Complete Name</string>
    <string name="edittext2">Email Address</string>
    <string name="edittext3">Password</string>
    <string name="edittext4">Enter 6-digit code</string>
    <string name="edittext5">New Password</string>
    <string name="edittext6">Confirm Password</string>
    <string name="forgotpassword1">Recover your password</string>
    <string name="forgotpassword2">Please enter the email address that is associated with your Mobile Palengke account.</string>
    <string name="forgotpassword3">Enter OTP</string>
    <string name="forgotpassword4">Please enter the 6-digit code that we sent to your email.</string>
    <string name="forgotpassword5">Resend Code</string>
    <string name="forgotpassword6">Create new password</string>
    <string name="forgotpassword7">Your new password must be different from previous used passwords.</string>
    <string name="forgotpassword8">Password Changed</string>
    <string name="forgotpassword9">Awesome! You have successfully changed your password.</string>
    <string name="navmenu1">My Account</string>
    <string name="navmenu2">Cart</string>
    <string name="navmenu3">Settings</string>
    <string name="navmenu4">Sign Out</string>
    <string name="navdrawer1">Open Navigation drawer</string>
    <string name="navdrawer2">Close Navigation drawer</string>
    <string name="home1">Category</string>
    <string name="home2">Home</string>
    <string name="home3">Cart</string>
    <string name="home4">Profile</string>
    <string name="home5">Featured Products</string>
    <string name="home6">New Products</string>
    <string name="home7">About Us</string>
    <string name="SeeAllCategory">See All Category</string>
    <string name="mealplan">MEAL PLAN</string>
    <string name="mealplan1">Vegetables</string>
    <string name="mealplan2">Beef</string>
    <string name="mealplan3">Chicken</string>
    <string name="mealplan4">Dessert</string>
    <string name="mealplan5">Pork</string>
    <string name="mealplan6">Rice</string>
    <string name="meal1">Lumpiang Sariwa</string>
    <string name="meal2">Pinakbet</string>
    <string name="meal3">Spicy Eggplant Stir Fry</string>
    <string name="meal4">Utan Bisaya</string>
    <string name="meal5">Adobong Kangkong</string>
    <string name="meal6">Chop Suey</string>
    <string name="view">View Recipe</string>
    <string name="see">See All</string>
    <string name="Category1">Fresh Vegetables</string>
    <string name="Category2">Fresh Meats</string>
    <string name="Category3">Canned Goods</string>
    <string name="Category4">Frozen Goods</string>
    <string name="Category5">Noodles and Pasta</string>
    <string name="Category6">Rice</string>
    <string name="Category7">Fresh Fruits</string>
    <string name="Category8">Eggs and Dairy</string>
    <string name="Category9">Dried Goods</string>
    <string name="Category10">Organic</string>
    <string name="ContactUs1">Contact Us</string>
    <string name="ContactUs2">ADDRESS</string>
    <string name="ContactUs3">DAO St., Corner Nara, Bacoor, 4102 Cavite</string>
    <string name="ContactUs4">EMAIL</string>
    <string name="ContactUs5">mobilepalengke@gmail.com</string>
    <string name="ContactUs6">CONTACT NUMBER</string>
    <string name="ContactUs7">+63 926-662-9900</string>
    <string name="ContactUs8">We\'d Love To Hear From You</string>
    <string name="ContactUs9">Want to get in touch? Here\'s how you can reach us. Just send us a message in the form below and we\'re here to answer your questions you might have.</string>
    <string name="Cart1">Cart</string>
    <string name="Cart2">4</string>
    <string name="Cart3">ADD TO CART</string>
    <string name="Cart4">Total</string>
    <string name="Cart5">57.60</string>
    <string name="Cart6">Calamansi (500g)</string>
    <string name="Cart7">Papaya Green (500)</string>
    <string name="Cart8">₱86.60</string>
    <string name="Cart9">Okra(500g)</string>
    <string name="Cart10">14.60</string>
    <string name="Cart11">Quantity</string>
    <string name="Cart12">REMOVE</string>
    <string name="Cart13">PROCEED TO CHECKOUT</string>
    <string name="Cart14">UPDATE CARTPAGE</string>
    <string name="Cart16">UPDATE CART</string>
    <string name="Cart17">Checkout</string>
    <string name="ProductSelection1">Related Products</string>
    <string name="ProductSelection2">ProductName</string>
    <string name="ProductSelection3">ProductPrice</string>
    <string name="ProductPage1">Calamansi</string>
    <string name="ProductPage2">₱57.60</string>
    <string name="ProductPage3">500g</string>
    <string name="ProductPage4">Related Products</string>
    <string name="ProductPage5">Grapes</string>
    <string name="ProductPage6">₱50.45</string>
    <string name="ProductPage7">Okra</string>
    <string name="ProductPage8">₱12</string>
    <string name="ProductPage9">Papaya</string>
    <string name="ProductPage10">₱30</string>
    <string name="ProductPage11">11</string>
    <string name="ProductPage12">Add To Cart</string>
    <string name="CheckoutPage1">Recipient Details</string>
    <string name="CheckoutPage2">Edit</string>
    <string name="CheckoutPage3">Name:</string>
    <string name="CheckoutPage4">Mark Alfie Mercado</string>
    <string name="CheckoutPage5">Mobile No.:</string>
    <string name="CheckoutPage6">09955366450</string>
    <string name="CheckoutPage7">------------------------------------------------------------------------------</string>
    <string name="CheckoutPage8">Delivery Address</string>
    <string name="CheckoutPage9">Payment Method</string>
    <string name="CheckoutPage10">Cash On Delivery</string>
    <string name="CheckoutPage11">GCash</string>
    <string name="CheckoutPage12">Paymaya</string>
    <string name="CheckoutPage13">DEBIT/CREDIT CARD</string>
    <string name="CheckoutPage14">Order Summary</string>
    <string name="CheckoutPage15">View</string>
    <string name="CheckoutPage16">Subtotal</string>
    <string name="CheckoutPage17">Discount</string>
    <string name="CheckoutPage18">Delivery fee</string>
    <string name="CheckoutPage19">Place Order</string>
    <string name="PurchasedProduct1">Purchased Product</string>
    <string name="PurchasedProduct2">Track Order</string>
    <string name="PurchasedProduct3">x4</string>
    <string name="PurchasedProduct4">₱234.4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MealNavFrag">Meal Plan</string>
    <string name="Ingredients">Ingredients</string>
    <string name="MealDescription2">Pinakbet is a Filipino vegetable dish. It is composed of a variety of vegetables and it also has a protein component. I made use of lechon kawali or crispy deep-fried pork belly for this recipe.</string>
    <string name="Prep">Prep Time</string>
    <string name="Cook">Cook Time</string>
    <string name="Total">Total Time</string>
    <string name="Serve">Serving</string>
    <string name="PrepVal2">5 Minutes</string>
    <string name="CookVal2">35 Minutes</string>
    <string name="TotalVal2">45 Minutes</string>
    <string name="ServeVal2">4 People</string>
    <string name="Ingredients2">1 tablespoon canola oil \n 1 onion, peeled and chopped \n 2 cloves garlic, peeled and minced \n 1/2 pound pork belly, cut into 1-inch cubes \n 1 tablespoon shrimp paste \n 2 Roma tomatoes, chopped \n 2 cups water \n 1/2 small kalabasa, peeled and cut into pieces \n 8 okra, ends trimmed \n 1/2 bunch long beans, ends trimmed and cut into 3-inch lengths \n 1 medium ampalaya (bittermelon), seeded, halved and cut into 1-inch thick \n 1 large eggplant, ends trimmed and cut into 1-inch thick \n salt and pepper to taste</string>
</resources>