<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp"
    tools:context=".MP_ForgotPassword3">

    <ImageView
        android:id="@+id/logo_welcome"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/logo_text"
        android:layout_marginBottom="30dp" />

    <androidx.cardview.widget.CardView style="@style/CardViewStyle1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="30dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/txtForgotPassword1"
                android:text="@string/forgotpassword6"
                android:textAlignment="textStart"
                style="@style/TVFontStyle1" />

            <TextView
                android:id="@+id/txtForgotPassword2"
                android:text="@string/forgotpassword7"
                android:textSize="12sp"
                android:textAlignment="textStart"
                android:layout_marginBottom="40dp"
                style="@style/TVFontStyle2" />

            <EditText
                android:id="@+id/etNewPassword"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/edittext5"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                style="@style/EditTextStyle1" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/edittext6"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                style="@style/EditTextStyle1" />

            <Button
                android:id="@+id/btnUpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/btn5"
                style="@style/MaterialBtnStyle.Button1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>